set(target_name leetcode_solutions)
aux_source_directory(. source_files)
add_executable(${target_name} ${source_files})
find_package(GTest CONFIG REQUIRED)
target_include_directories(${target_name} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(${target_name} PRIVATE lib_data_structure GTest::gtest GTest::gtest_main)